--- a/style.css
+++ b/style.css
@@ -8,13 +8,13 @@
 .container-center{
     width: 80%;
     margin: 0 auto;
-    /* debug */
-    background-color: tomato;
-    height: 100px;
+    height: 100%;
     position: relative;
 }
   
-
+.container-nav {
+    height: 200px;
+}
   /* header */
 header {
     background-image: url("img/jumbo.png");
@@ -22,19 +22,16 @@ header {
     height: 500px;
 }
 
-.container-nav {
-    
-}
-
 .logo {
     position: absolute;
-    top: 20px;
+    /* top: 20px; */
     left: 0;
+    vertical-align: middle;
 }
 
 nav {
     position: absolute;
-    top: 20px;
+    top: 30px;
     left: 50%;
     transform: translate(-50%, -50%);
 }
@@ -56,7 +53,19 @@ nav a {
     position: absolute;
     top: 20px;
     right: 0;
-    /* border-radius: 50%; */
+    padding: 5px 10px;
+    border-radius: 12px;
+    border: none;
+    cursor: pointer;
+
+}
+
+.payoff {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left:50%;
+    transform: translate(-50%, -50%);
 }
 
 
