--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
   
 .container-nav {
     height: 200px;
+    position: relative;
 }
   /* header */
 header {
@@ -25,17 +26,18 @@ header {
 }
 
 .logo {
-    /* vertical-align: middle; */
-    display: inline-block;
-    margin-top: 20px;
+    margin-top: 20px;;
+    position: absolute;
+    left: 0;
+
 }
 
 nav {
     display: inline-block;
     margin-top: 30px;
-    margin-left: 30px;
-    margin-right: 30px;
-    /* vertical-align: middle; */
+    position: absolute;
+    left: 50%;
+
 }
 
 nav li {
@@ -52,9 +54,9 @@ nav a {
 }
 
 #accedi {
-    display: inline-block;
-    /* vertical-align: middle; */
+    position: absolute;
     margin-top: 20px;
+    right: 0;
     
 } 
 
@@ -72,6 +74,24 @@ nav a {
     left:50%;
     transform: translate(-50%, -50%);
 }
+
+#bottone-blue {
+    color: white;
+    background-color: #23272a;
+}
+
+h1 {
+    color: white;
+}
+p {
+    margin-top: 30px;
+    margin-bottom: 20px;
+    color: white;
+}
+
+
+
+
 
 
 header .fa-facebook-f {
