--- a/style.css
+++ b/style.css
@@ -13,12 +13,14 @@ body {
     margin: 0 auto;
     height: 100%;
 }
-  
+
+  /* header */
+
 .container-nav {
-    height: 200px;
+    height: 100px;
     position: relative;
 }
-  /* header */
+
 header {
     background-image: url("img/jumbo.png");
     background-size: cover;
@@ -29,21 +31,20 @@ header {
     margin-top: 20px;;
     position: absolute;
     left: 0;
-
 }
 
 nav {
     display: inline-block;
-    margin-top: 30px;
+    margin-top: 40px;
     position: absolute;
     left: 50%;
-
+    transform: translate(-50%, -60%);
 }
 
 nav li {
     list-style-type: none;
     display: inline-block;
-    margin-right: 20px;
+    margin-right: 40px;
     margin-top: 10px;
 }
 
@@ -55,14 +56,13 @@ nav a {
 
 #accedi {
     position: absolute;
-    margin-top: 20px;
+    margin-top: 25px;
     right: 0;
-    
+    padding: 5px 10px;   
+    border-radius: 15px;
 } 
 
 .bottone {
-    padding: 5px 10px;
-    border-radius: 12px;
     border: none;
     cursor: pointer;
 }
@@ -70,28 +70,48 @@ nav a {
 .payoff {
     text-align: center;
     position: absolute;
-    top: 50%;
-    left:50%;
+    top: 40%;
+    left: 50%;
     transform: translate(-50%, -50%);
 }
 
 #bottone-blue {
     color: white;
     background-color: #23272a;
+    margin-left: 20px;
+    padding: 8px 15px;
+}
+
+#bottone-freccia {
+    margin-left: 20px;
+    padding: 8px 15px;
 }
 
 h1 {
     color: white;
 }
+
 p {
     margin-top: 30px;
     margin-bottom: 20px;
     color: white;
 }
 
+/* main */
 
+/* .row::after {
+    content: "";
+    display: table;
+    clear: both;
+}
 
+.tabella {
+    float: left;
+}
 
+.testo {
+    float: right;
+} */
 
 
 header .fa-facebook-f {
@@ -107,8 +127,7 @@ main {
 
 section {
     /* debug */
-    height: 200px;
-
+   /*  */
 }
 
 
@@ -117,5 +136,13 @@ footer{
     background-color: #23272a;
     /* debug */
     height: 200px;
+}
+
+.tabella {
+    width: 50%;
+}
+
+.testo {
+    width: 50%;
 }
 
