--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ h1 {
     color: white;
 }
 
-p {
+.testo-banner {
     margin-top: 30px;
     margin-bottom: 20px;
     color: white;
@@ -99,19 +99,53 @@ p {
 
 /* main */
 
-/* .row::after {
+.row::after {
     content: "";
     display: table;
     clear: both;
 }
 
-.tabella {
-    float: left;
+.row {
+    width: 1000px;
+    margin: auto;
 }
 
-.testo {
+.container-img {
+    float: left;
+    width: 60%;
+    margin-right: 10%;
+}
+img {
+    width: 100% ;
+}
+
+.container-testo {
+    float: left;
+    width: 30%;
+}
+
+.container-img-centrale {
     float: right;
-} */
+    width: 60%;
+}
+
+.container-testo-centrale{
+    float: left;
+    width: 30%;
+    margin-right: 10%;
+}
+
+
+h2 {
+  font-size: 50px;
+  margin-top: 20px;
+}
+
+.testo-sezione {
+    color: black;
+    margin-top: 30px;
+    font-weight: bold;
+}
 
 
 header .fa-facebook-f {
