--- a/style.css
+++ b/style.css
@@ -59,12 +59,13 @@ nav a {
     margin-top: 25px;
     right: 0;
     padding: 5px 10px;   
-    border-radius: 15px;
+    
 } 
 
 .bottone {
     border: none;
     cursor: pointer;
+    border-radius: 15px;
 }
 
 .payoff {
@@ -83,7 +84,6 @@ nav a {
 }
 
 #bottone-freccia {
-    margin-left: 20px;
     padding: 8px 15px;
 }
 
@@ -108,6 +108,8 @@ h1 {
 .row {
     width: 1000px;
     margin: auto;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 .container-img {
@@ -115,6 +117,7 @@ h1 {
     width: 60%;
     margin-right: 10%;
 }
+
 img {
     width: 100% ;
 }
@@ -136,47 +139,56 @@ img {
 }
 
 
-h2 {
+h3 {
   font-size: 50px;
   margin-top: 20px;
+  margin-bottom: 50px;
 }
 
 .testo-sezione {
     color: black;
-    margin-top: 30px;
+    /* margin-top: 30px; */
     font-weight: bold;
 }
 
 
-header .fa-facebook-f {
-    font-size: 25px;
-    color: #fff;
-}
-  
 
-  /* sezione principale */
-main {
-    margin: 50px 0;
+
+  /* sezione 4 */
+
+.sezione4 {
+    text-align: center;
 }
 
-section {
-    /* debug */
-   /*  */
+.item4 {
+    width: 70%;
+    margin:auto;
+}
+
+.cntainer-domanda {
+    background-image:url("img/stars.svg");
+    width: 531px;
+    margin: auto;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+h5 {
+    line-height: 100px;
+    vertical-align: middle;
+    font-size: 20px;
 }
 
 
 /* footer */
-footer{
+footer {
     background-color: #23272a;
     /* debug */
     height: 200px;
+    
 }
 
-.tabella {
-    width: 50%;
-}
-
-.testo {
-    width: 50%;
-}
-
+/* /* header .fa-facebook-f {
+    font-size: 25px;
+    color: #fff; */
+    
